# UIdetox

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENHANCEMENTS.md  LICENSE  MANIFEST.in  README.md  SKILL.md  _build_backend.py  append_analyzer.py  pyproject.toml
.agents/workflows/: detox.md
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: python-publish.yml
commands/: fix.md  scan.md  setup.md
docs/: CLAUDE.md  CODEX.md  COPILOT.md  CURSOR.md  GEMINI.md  WINDSURF.md
docs/agents/: domain.md  issue-tracker.md
docs/decisions/: visual-evidence-capability.md
docs/research/: pillow-integration.md  rendered-layout-detection-github.md
examples/fullstack-slop-lab/: .gitignore  README.md  beta-expectations.json  fixture-intent.json  index.html  openapi.yaml  package-lock.json  package.json  playwright.config.ts  requirements.txt  tokens.css  tsconfig.json  vite.config.ts
factory/prompts/: backprop.codex.md  lf-0013.implement.codex.md  lf-0013.review.codex.md  lf-0014.implement.codex.md  lf-0014.review.codex.md  lf-0015.implement.codex.md  lf-0015.review.codex.md  lf-0016.implement.codex.md  lf-0016.review.codex.md  lf-0017.implement.codex.md  lf-0017.review.codex.md  lf-0018.implement.codex.md  lf-0018.review.codex.md  lf-0019.implement.codex.md  lf-0020.implement.codex.md  lf-0021.implement.codex.md  lf-0021.review.codex.md  lf-0022.implement.codex.md  lf-0022.review.codex.md  lf-0023.implement.codex.md  lf-0023.review.codex.md  lf-0024.implement.codex.md  lf-0024.review.codex.md  lf-0025.implement.codex.md  lf-0025.review.codex.md
factory/reviews/: lf-0013.accepted.json  lf-0014.accepted.json  lf-0015.accepted.json  lf-0016.accepted.json  lf-0017.accepted.json  lf-0018.accepted.json  lf-0019.accepted.json  lf-0020.accepted.json  lf-0021.accepted.json  lf-0022.accepted.json  lf-0023.accepted.json  lf-0024.accepted.json  lf-0025.accepted.json
factory/runs/: 2026-07-17T042557Z0000.lf-0013.json  2026-07-17T042557Z0000.lf-0014.json  2026-07-17T044537Z0000.lf-0015.json  2026-07-17T051648Z0000.lf-0016.json  2026-07-17T053501Z0000.lf-0017.json  2026-07-19T135454Z0000.lf-0018.json  2026-07-19T141740Z0000.lf-0019.json  2026-07-19T145533Z0000.lf-0020.json  2026-07-19T151618Z0000.lf-0021.json  2026-07-19T203005Z0000.lf-0022.json  2026-07-19T210433Z0000.lf-0023.json  2026-07-19T212823Z0000.lf-0024.json  2026-07-19T214317Z0000.lf-0025.json
plans/: 001-reproducible-verification.md  002-prompt-data-isolation.md  003-release-verification-gate.md  004-batch-queue-persistence.md  005-machine-readable-scan-output.md  006-auto-commit-failure-reporting.md  007-animation-state-token-matching.md  008-true-incremental-scan.md  009-unified-file-discovery.md  010-optional-capability-extras.md  011-capture-characterization-tests.md  012-analyzer-module-decomposition.md  README.md
reference/: anti-patterns.md  color-palettes.md
scripts/: sync_data.py
slop-harness/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
tests/: conftest.py  test_agent_integration.py  test_ast_capabilities.py  test_bugfixes.py  test_capabilities.py  test_capture.py  test_cli_visual_evidence.py  test_color_utils.py  test_contracts.py  test_critical_fixes.py  test_design_context.py  test_finish.py  test_frontend_mapping.py  test_git_policy.py  test_gitnexus_cache.py  test_history.py  test_intent_command.py  test_intent_journal.py  test_live_demo_findings.py  test_memory.py  test_next_command.py  test_onboarding.py  test_optional_dependencies.py  test_project_mapping.py  test_prompt_safety.py  test_redesign_planning.py  test_redundancy.py  test_regressions.py  test_release_readiness.py  test_review.py  test_rule_registry.py  test_runtime_observer.py  test_scan_route_ui_states.py  test_source_facts.py  test_state.py  test_state_persistence.py  test_status.py  test_subagent.py  test_sync.py  test_tooling.py  (+9 more)
uidetox/: __init__.py  agent_integration.py  analyzer.py  analyzer_ast.py  analyzer_custom.py  analyzer_engine.py  analyzer_interactions.py  analyzer_project.py  analyzer_rules.py  capabilities.py  cli.py  color_utils.py  contracts.py  design_context.py  fileset.py  frontend_map.py  frontend_semantics.py  git_policy.py  gitnexus_cache.py  history.py  intent_journal.py  memory.py  onboarding.py  project_map.py  prompt_safety.py  prototype.py  redesign.py  rule_registry.py  runtime_layout.py  runtime_observer.py  skills.py  source_facts.py  state.py  subagent.py  tooling.py  utils.py  ux_states.py  visual_evidence.py  visual_semantics.py  visual_worker.py  (+3 more)
uidetox/commands/: add_issue.py  autofix.py  batch_resolve.py  capture.py  check.py  compare.py  detect.py  diff.py  exclude.py  finish.py  format_cmd.py  history_cmd.py  intent.py  lint.py  loop.py  map.py  memory_cmd.py  next.py  plan.py  prototype.py  redesign.py  (+16 more)
(+77 files in other folders)
