[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uidetox"
version = "1.5.1"
description = "Agent harness and CLI to eliminate AI slop from frontend code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "artmanuky"}
]
keywords = ["code-quality", "frontend", "design", "ai-slop", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-css>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
memory = [
    "chromadb>=0.4.24",
]
capture = [
    "Pillow>=10.0.0",
    "playwright>=1.42.0",
]
all = [
    "chromadb>=0.4.24",
    "Pillow>=10.0.0",
    "playwright>=1.42.0",
]

[project.urls]
Homepage = "https://github.com/OJamals/UIdetox"
Repository = "https://github.com/OJamals/UIdetox"
Issues = "https://github.com/OJamals/UIdetox/issues"

[project.scripts]
uidetox = "uidetox.cli:main"

[tool.setuptools.packages.find]
include = ["uidetox*"]

[tool.setuptools.package-data]
uidetox = [
    "py.typed",
    "data/*.md",
    "data/commands/*.md",
    "data/reference/*.md",
    "data/docs/*.md",
    "data/transforms/*.js",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = ["tests"]
